# ZeppelinExperiments

./: .gitignore  CMakeLists.txt  README.md  density.py  example_buffering.conf  example_streaming.conf  run.sh  toprc
buffer_expr/: buffer_expr.cpp  run_buffer_expr.sh
comparison_systems/: README.md
comparison_systems/aspen/: README.md
comparison_systems/aspen/code/tools/: continuous_query_test.cpp  ingestion_test.cpp
comparison_systems/experiment_runners/: aspen_exprs.sh  aspen_manager.cpp  aspen_unlim.sh  run_compare_lim_query.sh  run_compare_lim_speed.sh  run_compare_unlim_query.sh  run_compare_unlim_speed.sh
comparison_systems/terrace/: README.md
comparison_systems/terrace/code/: Makefile
comparison_systems/terrace/code/src/: continuous_query_test.cc  ingestion_test.cc
cont_expr/: cont_expr.cpp  run_correctness_test.sh
experiment/: speed_expr.cpp
experiment/util/: configuration.cpp  configuration.h  insertion_mgr.h
parallel_expr/: parallel_expr.cpp
plotting/: parallel_plot.R  parallel_plot3.R  plot.sh  query.R  query.csv  query_disk.R  setup.sh  space_data.csv  space_plot.R  speed_data_unlim.csv  speed_plot.R  speed_plot2.R
plotting/R_scripts/: parallel_data.csv  parallel_data3.csv  parallel_plot.R  parallel_plot3.R  query.R  query_disk.R  query_disk.csv  space_data.csv  space_plot.R  speed_data.csv  speed_plot.R  speed_plot2.R
plotting/latex/: correctness.tex  defines.tex  l0size.tex  l0speed.tex  main.tex  other_figures.tex  packages.tex
plotting/latex_tables/: defines.tex  l0size.csv  l0size.tex  l0speed.csv  l0speed.tex  main.tex  packages.tex
query_expr/: binary_cont_expr.cpp  bursty_queries.cpp  query_expr.cpp  query_expr_manager.cpp
sketch_expr/: agm_sketch_expr.cpp  agm_sketch_query_expr.cpp  combine_sketch_expr_results.cpp  cube_sketch_expr.cpp  cube_sketch_query_expr.cpp  run_sketch_expr.sh  run_sketch_query_expr.sh
sketch_expr/agm_sketching/include/: agm_sketch.h  bucket.h  int127.h  prime_generator.h  types.h  update.h
sketch_expr/agm_sketching/src/: agm_sketch.cpp  bucket.cpp  int127.cpp  update.cpp  util.cpp
speed_expr/: run_experiments.sh  run_lim_speed_expr.sh  run_unlim_experiments.sh  run_unlim_speed_expr.sh  speed_expr.cpp  speed_expr_buffering.conf  speed_expr_manager.cpp  speed_process_stream.cpp  speed_runner.cpp  standalone_streaming.conf  tree_streaming.conf
util/: configuration.cpp  configuration.h  density.py  graph_ideas.txt  graph_shuffler.cpp  insertion_mgr.cpp  insertion_mgr.h  max_finder.cpp  shell_exec.cpp  shell_exec.h  stats.h  stream_differ.cpp  streamify.cpp
